@@ -97,8 +97,9 @@ sub run {
         my $pdl_data = "t/pdl_data";
         if ( !-f $pdl_data ) {
             my $x1 = zeroes( 50 )->xlinvals( 0, 20 * PDL::Constants::PI() );
-            my $y1 = sin( $x1 ) * exp( -0.1 * $x1 );
-            Storable::nstore [ $x1, $y1 ], $pdl_data;
+            my $y1 = ( sin( $x1 ) * exp( -0.1 * $x1 ) );
+            # restrict PDL data to integers to avoid platform porting issues
+            Storable::nstore [ ($x1*100)->long, ($y1*10000)->long ], $pdl_data;
         }
 
         my ( $x1, $y1 ) = @{ Storable::retrieve( $pdl_data ) };
@@ -194,7 +195,7 @@ q|/clientresp / {"args":"[{\"boxpoints\":\"all\",\"jitter\":0.3,\"pointpos\":-1.
             @req_vals ) =>
 qq[{"url": "https://plot.ly/~$user->{un}/1", "message": "High five! You successfuly sent some data to your account on plotly. View your plot in your browser at https://plot.ly/~$user->{un}/1 or inside your plot.ly account where it is named 'plot from API (1)'", "warning": "", "filename": "plot from API (1)", "error": ""}],
         sprintf(
-q|/clientresp / {"args":"[[0,1.28228271575094,2.56456543150187,3.84684814725281,5.12913086300374,6.41141357875468,7.69369629450562,8.97597901025655,10.2582617260075,11.5405444417584,12.8228271575094,14.1051098732603,15.3873925890112,16.6696753047622,17.9519580205131,19.234240736264,20.516523452015,21.7988061677659,23.0810888835168,24.3633715992678,25.6456543150187,26.9279370307697,28.2102197465206,29.4925024622715,30.7747851780225,32.0570678937734,33.3393506095243,34.6216333252753,35.9039160410262,37.1861987567771,38.4684814725281,39.750764188279,41.03304690403,42.3153296197809,43.5976123355318,44.8798950512828,46.1621777670337,47.4444604827846,48.7267431985356,50.0090259142865,51.2913086300374,52.5735913457884,53.8558740615393,55.1381567772902,56.4204394930412,57.7027222087921,58.9850049245431,60.267287640294,61.5495703560449,62.8318530717959],[0,0.843294627805856,0.422128698503034,-0.441226470165472,-0.547503487089109,0.0673517422367614,0.457366285904565,0.176828213301626,-0.265389780406003,-0.269674043959601,0.0703646298416577,0.243893188115149,0.0676384677126959,-0.154863929056215,-0.129858243347091,0.05482869629949,0.127928477398816,0.021611443873364,-0.0881715414468317,-0.0608587917241091,0.0377619990293321,0.0659943959757905,0.00381506496885814,-0.0491560023375872,-0.0275581151401661,0.0242415664367422,0.0334587771159902,-0.00200936014698983,-0.0268958480722349,-0.0119084571919307,0.0148506747745368,0.0166484433762141,-0.00315755789163243,-0.0144629574290807,-0.0047964523556046,0.00879030769874005,0.00811161194115449,-0.00274140367899917,-0.00764893974873858,-0.00170756920936203,0.0050639031844756,0.00385613988297645,-0.00198811948558657,-0.00397903179641911,-0.000453403047040574,0.00285196918046206,0.0017784507207353,-0.00131658072954927,-0.00203518684842697,-4.57376446929804e-018]]","key":"%s","kwargs":"{\"filename\":\"plot from API (1)\",\"fileopt\":null}","origin":"plot","platform":"Perl","un":"%s","version":"%s"}|,
+q|/clientresp / {"args":"[[0,128,256,384,512,641,769,897,1025,1154,1282,1410,1538,1666,1795,1923,2051,2179,2308,2436,2564,2692,2821,2949,3077,3205,3333,3462,3590,3718,3846,3975,4103,4231,4359,4487,4616,4744,4872,5000,5129,5257,5385,5513,5642,5770,5898,6026,6154,6283],[0,8432,4221,-4412,-5475,673,4573,1768,-2653,-2696,703,2438,676,-1548,-1298,548,1279,216,-881,-608,377,659,38,-491,-275,242,334,-20,-268,-119,148,166,-31,-144,-47,87,81,-27,-76,-17,50,38,-19,-39,-4,28,17,-13,-20,0]]","key":"%s","kwargs":"{\"filename\":\"plot from API (1)\",\"fileopt\":null}","origin":"plot","platform":"Perl","un":"%s","version":"%s"}|,
             @req_vals ) =>
 qq[{"url": "https://plot.ly/~$user->{un}/2", "message": "High five! You successfuly sent some data to your account on plotly. View your plot in your browser at https://plot.ly/~$user->{un}/2 or inside your plot.ly account where it is named 'plot from API (2)'", "warning": "", "filename": "plot from API (2)", "error": ""}],
         sprintf(
